# light-node

./: .gitignore  Makefile  README.md  config.yml  go.mod  go.sum  main.go  run_multi.sh
clients/: cosmos.go  request.go
config/: config.go
node/: verifier.go
risc0-merkle-service/: .gitignore  README.md  run_merkle_tree.sh
risc0-merkle-service/cli/: Cargo.toml
risc0-merkle-service/cli/src/: main.rs
risc0-merkle-service/host/: Cargo.toml
risc0-merkle-service/host/src/: main.rs
risc0-merkle-service/methods/: Cargo.toml
risc0-merkle-service/methods/guest/: Cargo.toml
risc0-merkle-service/methods/guest/src/: main.rs
scripts/: _prebuild.sh  build-risczero.sh  light-node-runner.sh  risczero-runner.sh  runner.sh
utils/: get_env.go  hash_string.go  random_sampler.go  wallet_ops.go
