[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"