[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
actix-web = "4.0"
base64 = "0.13"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15.0"
